--- a/formacao.html
+++ b/formacao.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!--My CSS-->
-    <link rel="stylesheet" type="text/css" href="formação.css">
+    <link rel="stylesheet" type="text/css" href="formacao.css">
     
     <!--CS Bootstrap-->
     <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
@@ -33,9 +33,9 @@
             <div class="navbar-nav">
               <a class="nav-link" aria-current="page" href="index.html" style="color: white">Home</a>
               <a class="nav-link" href="sobre.html" style="color: white" target="_blank">Sobre Mim</a>
-              <a class="nav-link active" href="formação.html" style="color: white" target="_blank">Formação</a>
+              <a class="nav-link active" href="formacao.html" style="color: white" target="_blank">Formação</a>
               <a class="nav-link" href="profissional.html" style="color: white" target="_blank">Atuação Profissional</a>
-              <a class="nav-link" href="portfólio.html" style="color: white" target="_blank">Portfólio</a>
+              <a class="nav-link" href="portfolio.html" style="color: white" target="_blank">Portfólio</a>
               <a class="nav-link" href="contato.html" style="color: white" target="_blank">Contato</a>
             </div>
           </div>
