--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--My CSS-->
-    <link rel="stylesheet" type="text/css" href="portfólio.css">
+    <link rel="stylesheet" type="text/css" href="portfolio.css">
 
     <!--CS Bootstrap-->
     <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
@@ -30,9 +30,9 @@
         <div class="navbar-nav">
           <a class="nav-link" aria-current="page" href="index.html" style="color: white">Home</a>
           <a class="nav-link" href="sobre.html" style="color: white" target="_blank">Sobre Mim</a>
-          <a class="nav-link" href="formação.html" style="color: white" target="_blank">Formação</a>
+          <a class="nav-link" href="formacao.html" style="color: white" target="_blank">Formação</a>
           <a class="nav-link" href="profissional.html" style="color: white" target="_blank">Atuação Profissional</a>
-          <a class="nav-link active" href="portfólio.html" style="color: white" target="_blank">Portfólio</a>
+          <a class="nav-link active" href="portfolio.html" style="color: white" target="_blank">Portfólio</a>
           <a class="nav-link" href="contato.html" style="color: white" target="_blank">Contato</a>
         </div>
       </div>
@@ -60,10 +60,14 @@
 
           <div class="card-body">
             <p class="card-text text-center">Jogo da velha.</p>
+            <p class="card-text text-center">Quer jogar o famoso jogo da velha direto do navegador? Esse projeto é destinado para que você possa se divertir com seus amigos facilmente.</p>
+            <p class="card-text text-center">As tecnologias usadas foram: HTML, CSS e JavaScript</p>
             <div class="d-flex justify-content-between align-items-center">
               <div class="btn-group">
-                <button type="button" class="btn btn-sm btn-outline-secondary">Link do Projeto</button>
-                <button type="button" class="btn btn-sm btn-outline-secondary">Repositório</button>
+               <button onclick="window.open('https://github.com/joaolhcb/projeto-jogodavelha')" type="button" class="btn btn-sm btn-outline-secondary"><a target="_blank" href='https://github.com/joaolhcb/projeto-jogodavelha'></a>Link</button>
+               <button onclick="window.open('https://stackshare.io/html5')" type="button" class="btn btn-sm btn-outline-secondary">HTML</button>
+               <button onclick="window.open('https://stackshare.io/css-3')" type="button" class="btn btn-sm btn-outline-secondary">CSS</button>
+               <button onclick="window.open('https://stackshare.io/javascript')" type="button" class="btn btn-sm btn-outline-secondary">JavaScript</button>
               </div>
               </div>
           </div>
@@ -75,10 +79,14 @@
           <img src="https://s2.glbimg.com/LF5DAbEFQPLYV82fqwgeA2HDoJU=/0x0:695x390/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_08fbf48bc0524877943fe86e43087e7a/internal_photos/bs/2019/j/B/fEjkqCTlA0BMFLzSq8Bg/como-jogar-jogo-dinossauro-google-online-tutorial.jpg">
           <div class="card-body">
             <p class="card-text text-center">Replicando o jogo do dinossauro.</p>
+            <p class="card-text text-center">O jogo do dinossauro mais amado replicado nessa versão onde você pode jogar em qualquer lugar.</p>
+            <p class="card-text text-center">As tecnologias usadas foram: HTML, CSS e JavaScript</p>
             <div class="d-flex justify-content-between align-items-center">
               <div class="btn-group">
-                <button type="button" class="btn btn-sm btn-outline-secondary">Link do Projeto</button>
-                <button type="button" class="btn btn-sm btn-outline-secondary">Repositório</button>
+                <button onclick="window.open('https://github.com/joaolhcb/dino-game')" type="button" class="btn btn-sm btn-outline-secondary">Link</button>
+                <button onclick="window.open('https://stackshare.io/html5')" type="button" class="btn btn-sm btn-outline-secondary">HTML</button>
+                <button onclick="window.open('https://stackshare.io/css-3')" type="button" class="btn btn-sm btn-outline-secondary">CSS</button>
+                <button onclick="window.open('https://stackshare.io/javascript')" type="button" class="btn btn-sm btn-outline-secondary">JavaScript</button>
               </div>
             </div>
           </div>
@@ -90,10 +98,14 @@
           <img src="galeria.png">
           <div class="card-body">
             <p class="card-text text-center">Página pessoal para o meu canal na Twitch.</p>
+            <p class="card-text text-center">Criei uma página para facilitar que as pessoas pudessem ver os jogos que já foram finalizados nas minhas lives da Twitch.</p>
+            <p class="card-text text-center">As tecnologias usadas foram: HTML e CSS</p>
             <div class="d-flex justify-content-between align-items-center">
               <div class="btn-group">
-                <button type="button" class="btn btn-sm btn-outline-secondary">Link do Projeto</button>
-                <button type="button" class="btn btn-sm btn-outline-secondary">Repositório</button>
+                
+                <button onclick="window.open('https://github.com/joaolhcb/joaolhcb-Site-Twitch')" type="button" class="btn btn-sm btn-outline-secondary">Link</button>
+                <button onclick="window.open('https://stackshare.io/html5')" type="button" class="btn btn-sm btn-outline-secondary">HTML</button>
+                <button onclick="window.open('https://stackshare.io/css-3')" type="button" class="btn btn-sm btn-outline-secondary">CSS</button>
               </div>
             </div>
           </div>
