--- a/profissional.html
+++ b/profissional.html
@@ -28,9 +28,9 @@
             <div class="navbar-nav">
               <a class="nav-link" aria-current="page" href="index.html" style="color: white">Home</a>
               <a class="nav-link" href="sobre.html" style="color: white" target="_blank">Sobre Mim</a>
-              <a class="nav-link" href="formação.html" style="color: white" target="_blank">Formação</a>
+              <a class="nav-link" href="formacao.html" style="color: white" target="_blank">Formação</a>
               <a class="nav-link active" href="profissional.html" style="color: white" target="_blank">Atuação Profissional</a>
-              <a class="nav-link" href="portfólio.html" style="color: white" target="_blank">Portfólio</a>
+              <a class="nav-link" href="portfolio.html" style="color: white" target="_blank">Portfólio</a>
               <a class="nav-link" href="contato.html" style="color: white" target="_blank">Contato</a>
             </div>
           </div>
