--- a/HTML/index.html
+++ b/HTML/index.html
@@ -51,23 +51,65 @@
 <!--End of home-->
     
 <!--Footer-->
-<footer class="container-fluid text-center bg-footer margin">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <p style="color: white">Desenvolvido por:</p> 
-                <p style="color: white">João Barboza</p>
-            </div>
-            <div class="col-md-6 footer-icons">
-                <p style="color: white">Redes Sociais:</p>
-                <p><a href="https://twitter.com/JoaoLHCB" target="_blank" style="color: black"><i class="fa-brands fa-twitter fa-2x"></i></a></p>
-                <p><a href="https://www.linkedin.com/in/joaoluisbarboza/" target="_blank" style="color: black"><i class="fa-brands fa-linkedin fa-2x"></i></a></p>
-                <p><a href="https://www.instagram.com/joaolhcb/" target="_blank" style="color: black"><i class="fa-brands fa-instagram fa-2x"></i></a></p>
-                <p><a href="https://github.com/joaolhcb/" target="_blank" style="color: black"><i class="fa-brands fa-github fa-2x"></i></a></p>
-                <p><a href="https://www.facebook.com/joao.lhcb" target="_blank" style="color: black"><i class="fa-brands fa-facebook fa-2x"></i></a></p>
-            </div>
-        </div>
-    </div>
+<footer class="text-center text-white bg-footer">
+  <!-- Grid container -->
+  <div class="container pt-4">
+    <!-- Section: Social media -->
+    <section class="mb-4">
+      <!-- Facebook -->
+      <a
+        class="btn btn-link btn-floating btn-lg text-dark m-1"
+        href="https://www.facebook.com/joao.lhcb/"
+        role="button"
+        data-mdb-ripple-color="dark"
+        ><i class="fab fa-facebook-f"></i
+      ></a>
+
+      <!-- Twitter -->
+      <a
+        class="btn btn-link btn-floating btn-lg text-dark m-1"
+        href="https://twitter.com/JoaoLHCB"
+        role="button"
+        data-mdb-ripple-color="dark"
+        ><i class="fab fa-twitter"></i
+      ></a>
+
+      <!-- Instagram -->
+      <a
+        class="btn btn-link btn-floating btn-lg text-dark m-1"
+        href="https://www.instagram.com/joaolhcb/"
+        role="button"
+        data-mdb-ripple-color="dark"
+        ><i class="fab fa-instagram"></i
+      ></a>
+
+      <!-- Linkedin -->
+      <a
+        class="btn btn-link btn-floating btn-lg text-dark m-1"
+        href="https://www.linkedin.com/in/joaoluisbarboza/"
+        role="button"
+        data-mdb-ripple-color="dark"
+        ><i class="fab fa-linkedin"></i
+      ></a>
+      <!-- Github -->
+      <a
+        class="btn btn-link btn-floating btn-lg text-dark m-1"
+        href="https://github.com/joaolhcb/"
+        role="button"
+        data-mdb-ripple-color="dark"
+        ><i class="fab fa-github"></i
+      ></a>
+    </section>
+    <!-- Section: Social media -->
+  </div>
+  <!-- Grid container -->
+
+  <!-- Copyright -->
+  <div class="text-center p-3" style="color: white">
+    <p>Desenvolvido por:</p>
+    <p style="color: white">João Barboza</p>
+  </div>
+  <!-- Copyright -->
 </footer>
 <!--End of Footer-->
 </body>
