--- a/HTML/contato.html
+++ b/HTML/contato.html
@@ -57,10 +57,10 @@
 <!--Social Media-->
             <div class="col-md">
             <h3>Redes Sociais:</h3>
-                <p><a href="https://www.facebook.com/joao.lhcb" target="_blank">Facebook</a></p>
-                <p><a href="https://www.instagram.com/joaolhcb/" target="_blank">Instagram</a></p>
-                <p><a href="https://www.linkedin.com/in/joaoluisbarboza/" target="_blank">Linkedin</a></p>
-                <p><a href="https://twitter.com/JoaoLHCB" target="_blank">Twitter</a></p>
+                <p><a href="https://www.facebook.com/joao.lhcb">Facebook</a></p>
+                <p><a href="https://www.instagram.com/joaolhcb/">Instagram</a></p>
+                <p><a href="https://www.linkedin.com/in/joaoluisbarboza/">Linkedin</a></p>
+                <p><a href="https://twitter.com/JoaoLHCB">Twitter</a></p>
             </div>
         </div>
     </div>
