--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -66,10 +66,9 @@
             <p class="card-text text-center">As tecnologias usadas foram: HTML, CSS e JavaScript</p>
             <div class="d-flex justify-content-between align-items-center">
               <div class="btn-group">
-               <button onclick="window.open('https://github.com/joaolhcb/projeto-jogodavelha')" type="button" class="btn btn-sm btn-outline-secondary"><a target="_blank" href='https://github.com/joaolhcb/projeto-jogodavelha'></a>Link</button>
-               <button onclick="window.open('https://stackshare.io/html5')" type="button" class="btn btn-sm btn-outline-secondary">HTML</button>
-               <button onclick="window.open('https://stackshare.io/css-3')" type="button" class="btn btn-sm btn-outline-secondary">CSS</button>
-               <button onclick="window.open('https://stackshare.io/javascript')" type="button" class="btn btn-sm btn-outline-secondary">JavaScript</button>
+                <button onclick="window.location.href='https://github.com/joaolhcb/projeto-jogodavelha'" type="button" class="btn btn-sm btn-outline-secondary">Repositório</button>
+               <button onclick="window.location.href='https://joaolhcb.github.io/projeto-jogodavelha/'" type="button" class="btn btn-sm btn-outline-secondary">Link do Projeto</button>
+               <button onclick="window.location.href='../HTML/tecnologia.html'" type="button" class="btn btn-sm btn-outline-secondary">Tecnologias utilizadas</button>
               </div>
               </div>
           </div>
@@ -85,10 +84,9 @@
             <p class="card-text text-center">As tecnologias usadas foram: HTML, CSS e JavaScript</p>
             <div class="d-flex justify-content-between align-items-center">
               <div class="btn-group">
-                <button onclick="window.open('https://github.com/joaolhcb/dino-game')" type="button" class="btn btn-sm btn-outline-secondary">Link</button>
-                <button onclick="window.open('https://stackshare.io/html5')" type="button" class="btn btn-sm btn-outline-secondary">HTML</button>
-                <button onclick="window.open('https://stackshare.io/css-3')" type="button" class="btn btn-sm btn-outline-secondary">CSS</button>
-                <button onclick="window.open('https://stackshare.io/javascript')" type="button" class="btn btn-sm btn-outline-secondary">JavaScript</button>
+                <button onclick="window.location.href='https://github.com/joaolhcb/dino-game'" type="button" class="btn btn-sm btn-outline-secondary">Repositório</button>
+                <button onclick="window.location.href='https://joaolhcb.github.io/dino-game/'" type="button" class="btn btn-sm btn-outline-secondary">Link do Projeto</button>
+                <button onclick="window.location.href='../HTML/tecnologia.html'" type="button" class="btn btn-sm btn-outline-secondary">Tecnologias utilizadas</button>
               </div>
             </div>
           </div>
@@ -97,7 +95,7 @@
       
       <div class="col">
         <div class="card shadow-sm">
-          <img src="galeria.png">
+          <img src="../Imagens/galeria.png">
           <div class="card-body">
             <p class="card-text text-center">Página pessoal para o meu canal na Twitch.</p>
             <p class="card-text text-center">Criei uma página para facilitar que as pessoas pudessem ver os jogos que já foram finalizados nas minhas lives da Twitch.</p>
@@ -105,9 +103,9 @@
             <div class="d-flex justify-content-between align-items-center">
               <div class="btn-group">
                 
-                <button onclick="window.open('https://github.com/joaolhcb/joaolhcb-Site-Twitch')" type="button" class="btn btn-sm btn-outline-secondary">Link</button>
-                <button onclick="window.open('https://stackshare.io/html5')" type="button" class="btn btn-sm btn-outline-secondary">HTML</button>
-                <button onclick="window.open('https://stackshare.io/css-3')" type="button" class="btn btn-sm btn-outline-secondary">CSS</button>
+                <button onclick="window.location.href='https://github.com/joaolhcb/Galeria-Twitch'" type="button" class="btn btn-sm btn-outline-secondary">Repositório</button>
+                <button onclick="window.location.href='https://joaolhcb.github.io/Galeria-Twitch/'" type="button" class="btn btn-sm btn-outline-secondary">Link do Projeto</button>
+                <button onclick="window.location.href='../HTML/tecnologia.html'" type="button" class="btn btn-sm btn-outline-secondary">Tecnologias utilizadas</button>
               </div>
             </div>
           </div>
